Add private registration and profile details
